--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -10,7 +10,7 @@
         "sidebar_label": "What is DeepNLPF?"
       },
       "api": {
-        "title": "API RESTFul"
+        "title": "API REST"
       },
       "benchmarking": {
         "title": "Stude Profile"
