--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -30,6 +30,9 @@
       "dashboard": {
         "title": "DashBoard"
       },
+      "flair": {
+        "title": "Flair"
+      },
       "freeling": {
         "title": "FreeLing"
       },
