--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -27,9 +27,6 @@
       "cogcompnlp": {
         "title": "CogCompNLP"
       },
-      "configurations": {
-        "title": "Configurations"
-      },
       "createplugin": {
         "title": "Create Plugin"
       },
@@ -53,6 +50,9 @@
       },
       "install": {
         "title": "Installation"
+      },
+      "notifications": {
+        "title": "Notifications"
       },
       "opensesame": {
         "title": "Open Sesame"
@@ -114,6 +114,27 @@
     }
   },
   "pages-strings": {
+    "A Framework for Integrating Linguistic Analysis|no description given": "A Framework for Integrating Linguistic Analysis",
+    "DeepNLPF provides a component for integrating and customizing linguistic analysis. When building Plugins, you can add any PLN tool, regardless of the programming language in which it was created.|no description given": "DeepNLPF provides a component for integrating and customizing linguistic analysis. When building Plugins, you can add any PLN tool, regardless of the programming language in which it was created.",
+    "Custom Pipeline|no description given": "Custom Pipeline",
+    "DeepNLPF includes parallel processing strategies and multithreads to ensure maximum performance. Through the approach taken it is possible to process extremely large texts.|no description given": "DeepNLPF includes parallel processing strategies and multithreads to ensure maximum performance. Through the approach taken it is possible to process extremely large texts.",
+    "Parallel Processing|no description given": "Parallel Processing",
+    "DeepNLPF has two approaches to optimize execution. By default we use [Multiprocessing Pathos Framework](https://pypi.org/project/pathos/), but if you prefer you can choose to use [Faster Parallel Ray](https://ray.io/) 10x [fast as the first one](https://towardsdatascience.com/10x-faster-parallel-python-without-python-multiprocessing-e5017c93cce1).|no description given": "DeepNLPF has two approaches to optimize execution. By default we use [Multiprocessing Pathos Framework](https://pypi.org/project/pathos/), but if you prefer you can choose to use [Faster Parallel Ray](https://ray.io/) 10x [fast as the first one](https://towardsdatascience.com/10x-faster-parallel-python-without-python-multiprocessing-e5017c93cce1).",
+    "Boost Processing|no description given": "Boost Processing",
+    "DeepNLPF contains a DashBoard that allows you to view and process textual data without writing any lines of code and with few settings, choosing from various linguistic analyzes coming from a number of successful PLN tools.|no description given": "DeepNLPF contains a DashBoard that allows you to view and process textual data without writing any lines of code and with few settings, choosing from various linguistic analyzes coming from a number of successful PLN tools.",
+    "DeepNLPF has a flexible plugin architecture, allowing the integration of various third party PLN tools, regardless of the programming language in which it was built, it can be integrated into the analysis pipeline.|no description given": "DeepNLPF has a flexible plugin architecture, allowing the integration of various third party PLN tools, regardless of the programming language in which it was built, it can be integrated into the analysis pipeline.",
+    "DeepNLPF has a very simple solution for you to use natural language processing in your web, mobile or desktop application reducing the computational cost. Using the API we have provided you make this hard work for us and consume only the results of the analysis that interests you.|no description given": "DeepNLPF has a very simple solution for you to use natural language processing in your web, mobile or desktop application reducing the computational cost. Using the API we have provided you make this hard work for us and consume only the results of the analysis that interests you.",
+    "You don't have to spend hours shipping the computer waiting for your dataset to finish processing. BotNotification is responsible for keeping you informed about everything that happens during processing, you are the one who chooses the best way that it can do this, either through (Telegram, Email, Desktop Notifications or even by voice). What's up! liked? Take your time to relax, let BotNotification take care of everything for you.|no description given": "You don't have to spend hours shipping the computer waiting for your dataset to finish processing. BotNotification is responsible for keeping you informed about everything that happens during processing, you are the one who chooses the best way that it can do this, either through (Telegram, Email, Desktop Notifications or even by voice). What's up! liked? Take your time to relax, let BotNotification take care of everything for you.",
+    "Install plugins and pipeline with our command line interface.|no description given": "Install plugins and pipeline with our command line interface.",
+    "Repository Plugins|no description given": "Repository Plugins",
+    "Here you will find all external tool plugins built by us and third parties to use on DeepNLPF.|no description given": "Here you will find all external tool plugins built by us and third parties to use on DeepNLPF.",
+    "Did not find what you were looking for? Create your plugin now and help DeeoNLPF grow.|no description given": "Did not find what you were looking for? Create your plugin now and help DeeoNLPF grow.",
+    "Choose from the best natural language processing tools and add them to your analysis pipeline.|no description given": "Choose from the best natural language processing tools and add them to your analysis pipeline.",
+    "Tools NLP|no description given": "Tools NLP",
+    "Use semantic dictionaries in your pipeline and better results.|no description given": "Use semantic dictionaries in your pipeline and better results.",
+    "Semantic Dictionary|no description given": "Semantic Dictionary",
+    "Save and explore your datasets through a database.|no description given": "Save and explore your datasets through a database.",
+    "DataBase|no description given": "DataBase",
     "[Bug report](https://github.com/deepnlpf/deepnlpf/issues/new/choose), [Feature request](https://github.com/deepnlpf/deepnlpf/issues/new/choose), [Question](https://github.com/deepnlpf/deepnlpf/issues/new/choose).|no description given": "[Bug report](https://github.com/deepnlpf/deepnlpf/issues/new/choose), [Feature request](https://github.com/deepnlpf/deepnlpf/issues/new/choose), [Question](https://github.com/deepnlpf/deepnlpf/issues/new/choose).",
     "Issue Tracker|no description given": "Issue Tracker",
     "Need help?|no description given": "Need help?",
