--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -75,6 +75,9 @@
       "quanteda": {
         "title": "Quanteda"
       },
+      "README": {
+        "title": "README"
+      },
       "semafor": {
         "title": "SEMAFOR"
       },
